templates/cloudformation/apps/aem/full-set/security-groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create Security Groups for the AEM Stack
Conditions:
  CreateChaosMonkeyStackCondition:
    Fn::Equals:
      - Ref: ChaosMonkeyIncludeStack
      - 'true'
  CreatePreviewStackCondition:
    Fn::Equals:
      - Ref: PreviewIncludeStack
      - 'true'
Outputs:
  AuthorDispatcherELBSecurityGroup:
    Description: The Author Dispatcher ELB Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-AuthorDispatcherELBSecurityGroup
    Value:
      Ref: AuthorDispatcherELBSecurityGroup
  AuthorDispatcherSecurityGroup:
    Description: The Author Dispatcher Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-AuthorDispatcherSecurityGroup
    Value:
      Ref: AuthorDispatcherSecurityGroup
  AuthorELBSecurityGroup:
    Description: The Author ELB Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-AuthorELBSecurityGroup
    Value:
      Ref: AuthorELBSecurityGroup
  AuthorSecurityGroup:
    Description: The Author Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-AuthorSecurityGroup
    Value:
      Ref: AuthorSecurityGroup
  ChaosMonkeySecurityGroup:
    Description: The Chaos Monkey Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-ChaosMonkeySecurityGroup
    Value:
      Ref: ChaosMonkeySecurityGroup
    Condition: CreateChaosMonkeyStackCondition
  OrchestratorSecurityGroup:
    Description: The Orchestrator Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-OrchestratorSecurityGroup
    Value:
      Ref: OrchestratorSecurityGroup
  PublishDispatcherELBSecurityGroup:
    Description: The Publish Dispatcher ELB Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-PublishDispatcherELBSecurityGroup
    Value:
      Ref: PublishDispatcherELBSecurityGroup
  PreviewPublishDispatcherELBSecurityGroup:
    Condition: CreatePreviewStackCondition
    Description: The Publish Dispatcher ELB Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-PreviewPublishDispatcherELBSecurityGroup
    Value:
      Ref: PreviewPublishDispatcherELBSecurityGroup
  PublishDispatcherSecurityGroup:
    Description: The Publish Dispatcher Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-PublishDispatcherSecurityGroup
    Value:
      Ref: PublishDispatcherSecurityGroup
  PreviewPublishDispatcherSecurityGroup:
    Condition: CreatePreviewStackCondition
    Description: The Preview Publish Dispatcher Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-PreviewPublishDispatcherSecurityGroup
    Value:
      Ref: PreviewPublishDispatcherSecurityGroup
  PublishSecurityGroup:
    Description: The Publish Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-PublishSecurityGroup
    Value:
      Ref: PublishSecurityGroup
  PreviewPublishSecurityGroup:
    Condition: CreatePreviewStackCondition
    Description: The Preview Publish Security Group
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-PreviewPublishSecurityGroup
    Value:
      Ref: PreviewPublishSecurityGroup
  AemContentSyncSecurityGroup:
    Description: Security Group for content sync, allowing access between AEM full set stacks
    Export:
      Name:
        Fn::Sub: ${PrerequisitesStackPrefixParameter}-AemContentSyncSecurityGroup
    Value:
      Ref: AemContentSyncSecurityGroup
Parameters:
  AuthorDispatcherELBSecurityGroupInboundCidrIpParameter:
    Description: AEM Author Dispatcher ELB Security Group Inbound Cidr Ip
    Type: String
  ChaosMonkeyIncludeStack:
    Default: 'true'
    Description: Creates the ChaosMonkey stack or not
    Type: String
  PreviewIncludeStack:
    Default: 'false'
    Description: Creates the Preview stack resources or not
    Type: String
  NetworkStackPrefixParameter:
    Description: The AEM Stack Network Resources Stack Prefix
    Type: String
  PrerequisitesStackPrefixParameter:
    Description: The AEM Stack Prerequisite Resources Stack Prefix
    Type: String
  PrivateSubnetInternetOutboundCidrIpParameter:
    Description: AEM Stack Private Subnet Internet Outbound Cidr Ip Destination
    Type: String
  PublishDispatcherELBSecurityGroupInboundCidrIpParameter:
    Description: AEM Publish Dispatcher ELB Security Group Inbound Cidr Ip
    Type: String
  PreviewPublishDispatcherELBSecurityGroupInboundCidrIpParameter:
    Description: AEM Preview Publish Dispatcher ELB Security Group Inbound Cidr Ip
    Type: String
  SecureShellInboundCidrIpParameter:
    Description: AEM Stack Secure Shell Inbound Cidr Ip
    Type: String
  AemContentSyncInboundCidrIpParameter:
    Description: Inbounc Cidr Ip range for AEM content sync between full set stacks
    Type: String
Resources:
  AuthorDipatcherELBSecurityGroupEgress0:
    Properties:
      DestinationSecurityGroupId:
        Ref: AuthorDispatcherSecurityGroup
      FromPort: '443'
      GroupId:
        Ref: AuthorDispatcherELBSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorDipatcherSecurityGroupEgress0:
    Properties:
      DestinationSecurityGroupId:
        Ref: AuthorELBSecurityGroup
      FromPort: '443'
      GroupId:
        Ref: AuthorDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorDipatcherSecurityGroupEgress1:
    Properties:
      CidrIp:
        Ref: PrivateSubnetInternetOutboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: AuthorDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorDispatcherELBSecurityGroup:
    Properties:
      GroupDescription: AEM Author Dispatcher ELB Security Group
      Tags:
      - Key: Name
        Value: AEM Author Dispatcher ELB Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  AuthorDispatcherELBSecurityGroupIngress0:
    Properties:
      CidrIp:
        Ref: AuthorDispatcherELBSecurityGroupInboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: AuthorDispatcherELBSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorDispatcherSecurityGroup:
    Properties:
      GroupDescription: AEM Author Dispatcher Security Group
      Tags:
      - Key: Name
        Value: AEM Author Dispatcher Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  AuthorDispatcherSecurityGroupIngress0:
    Properties:
      FromPort: '443'
      GroupId:
        Ref: AuthorDispatcherSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: AuthorDispatcherELBSecurityGroup
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorDispatcherSecurityGroupIngress1:
    Properties:
      FromPort: '5432'
      GroupId:
        Ref: AuthorDispatcherSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: AuthorSecurityGroup
      ToPort: '5432'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorDispatcherSecurityGroupIngress2:
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: AuthorDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '22'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorELBSecurityGroup:
    Properties:
      GroupDescription: AEM Author ELB Security Group
      Tags:
      - Key: Name
        Value: AEM Author ELB Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  AuthorELBSecurityGroupEgress0:
    Properties:
      DestinationSecurityGroupId:
        Ref: AuthorSecurityGroup
      FromPort: '5432'
      GroupId:
        Ref: AuthorELBSecurityGroup
      IpProtocol: tcp
      ToPort: '5432'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorELBSecurityGroupIngress0:
    Properties:
      FromPort: '443'
      GroupId:
        Ref: AuthorELBSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: AuthorDispatcherSecurityGroup
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorELBSecurityGroupIngress1:
    Properties:
      FromPort: '443'
      GroupId:
        Ref: AuthorELBSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: OrchestratorSecurityGroup
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorSecurityGroup:
    Properties:
      GroupDescription: AEM Author Security Group
      Tags:
      - Key: Name
        Value: AEM Author Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  AuthorSecurityGroupEgress0:
    Properties:
      DestinationSecurityGroupId:
        Ref: PublishSecurityGroup
      FromPort: '5433'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorSecurityGroupEgress1:
    Properties:
      DestinationSecurityGroupId:
        Ref: AuthorSecurityGroup
      FromPort: '5432'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      ToPort: '5432'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorSecurityGroupEgress2:
    Properties:
      DestinationSecurityGroupId:
        Ref: AuthorSecurityGroup
      FromPort: '8023'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      ToPort: '8023'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorSecurityGroupEgress3:
    Properties:
      DestinationSecurityGroupId:
        Ref: AuthorDispatcherSecurityGroup
      FromPort: '443'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorSecurityGroupEgress4:
    Properties:
      CidrIp:
        Ref: PrivateSubnetInternetOutboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorSecurityGroupEgress5:
    Condition: CreatePreviewStackCondition
    Properties:
      DestinationSecurityGroupId:
        Ref: PreviewPublishSecurityGroup
      FromPort: '5433'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupEgress
  AuthorSecurityGroupIngress0:
    Properties:
      FromPort: '5432'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: AuthorELBSecurityGroup
      ToPort: '5432'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorSecurityGroupIngress1:
    Properties:
      FromPort: '5432'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: AuthorSecurityGroup
      ToPort: '5432'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorSecurityGroupIngress2:
    Properties:
      FromPort: '8023'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: AuthorSecurityGroup
      ToPort: '8023'
    Type: AWS::EC2::SecurityGroupIngress
  AuthorSecurityGroupIngress3:
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: AuthorSecurityGroup
      IpProtocol: tcp
      ToPort: '22'
    Type: AWS::EC2::SecurityGroupIngress
  ChaosMonkeySecurityGroup:
    Condition: CreateChaosMonkeyStackCondition
    Properties:
      GroupDescription: AEM Chaos Monkey Security Group
      Tags:
      - Key: Name
        Value: AEM Chaos Monkey Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  ChaosMonkeySecurityGroupIngress0:
    Condition: CreateChaosMonkeyStackCondition
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: ChaosMonkeySecurityGroup
      IpProtocol: tcp
      ToPort: '22'
    Type: AWS::EC2::SecurityGroupIngress
  ChaosSecurityGroupEgress0:
    Condition: CreateChaosMonkeyStackCondition
    Properties:
      CidrIp:
        Ref: PrivateSubnetInternetOutboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: ChaosMonkeySecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  OrchestratorSecurityGroup:
    Properties:
      GroupDescription: AEM Orchestrator Security Group
      Tags:
      - Key: Name
        Value: AEM Orchestrator Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  OrchestratorSecurityGroupEgress0:
    Properties:
      DestinationSecurityGroupId:
        Ref: AuthorELBSecurityGroup
      FromPort: '443'
      GroupId:
        Ref: OrchestratorSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  OrchestratorSecurityGroupEgress1:
    Properties:
      CidrIp:
        Ref: PrivateSubnetInternetOutboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: OrchestratorSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  OrchestratorSecurityGroupEgress2:
    Properties:
      DestinationSecurityGroupId:
        Ref: PublishSecurityGroup
      FromPort: '5433'
      GroupId:
        Ref: OrchestratorSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupEgress
  OrchestratorSecurityGroupEgress3:
    Condition: CreatePreviewStackCondition
    Properties:
      DestinationSecurityGroupId:
        Ref: PreviewPublishSecurityGroup
      FromPort: '5433'
      GroupId:
        Ref: OrchestratorSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupEgress
  OrchestratorSecurityGroupIngress0:
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: OrchestratorSecurityGroup
      IpProtocol: tcp
      ToPort: '22'
    Type: AWS::EC2::SecurityGroupIngress
  PublishDispatcherELBSecurityGroup:
    Properties:
      GroupDescription: AEM Publish Dispatcher ELB Security Group
      Tags:
      - Key: Name
        Value: AEM Publish Dispatcher ELB Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  PublishDispatcherELBSecurityGroupEgress0:
    Properties:
      DestinationSecurityGroupId:
        Ref: PublishDispatcherSecurityGroup
      FromPort: '443'
      GroupId:
        Ref: PublishDispatcherELBSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  PublishDispatcherELBSecurityGroupIngress0:
    Properties:
      CidrIp:
        Ref: PublishDispatcherELBSecurityGroupInboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: PublishDispatcherELBSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress

  PreviewPublishDispatcherELBSecurityGroup:
    Condition: CreatePreviewStackCondition
    Properties:
      GroupDescription: AEM Preview Publish Dispatcher ELB Security Group
      Tags:
      - Key: Name
        Value: AEM Preview Publish Dispatcher ELB Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  PreviewPublishDispatcherELBSecurityGroupEgress0:
    Condition: CreatePreviewStackCondition
    Properties:
      DestinationSecurityGroupId:
        Ref: PreviewPublishDispatcherSecurityGroup
      FromPort: '443'
      GroupId:
        Ref: PreviewPublishDispatcherELBSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  PreviewPublishDispatcherELBSecurityGroupIngress0:
    Condition: CreatePreviewStackCondition
    Properties:
      CidrIp:
        Ref: PreviewPublishDispatcherELBSecurityGroupInboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: PreviewPublishDispatcherELBSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress

  PublishDispatcherSecurityGroup:
    Properties:
      GroupDescription: AEM Publish Dispatcher Security Group
      Tags:
      - Key: Name
        Value: AEM Publish Dispatcher Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  PublishDispatcherSecurityGroupEgress0:
    Properties:
      DestinationSecurityGroupId:
        Ref: PublishSecurityGroup
      FromPort: '5433'
      GroupId:
        Ref: PublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupEgress
  PublishDispatcherSecurityGroupEgress1:
    Properties:
      CidrIp:
        Ref: PrivateSubnetInternetOutboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: PublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  PublishDispatcherSecurityGroupIngress0:
    Properties:
      FromPort: '443'
      GroupId:
        Ref: PublishDispatcherSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: PublishDispatcherELBSecurityGroup
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  PublishDispatcherSecurityGroupIngress1:
    Properties:
      FromPort: '443'
      GroupId:
        Ref: PublishDispatcherSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: PublishSecurityGroup
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  PublishDispatcherSecurityGroupIngress2:
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: PublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '22'
    Type: AWS::EC2::SecurityGroupIngress

  PreviewPublishDispatcherSecurityGroup:
    Condition: CreatePreviewStackCondition
    Properties:
      GroupDescription: AEM Preview Publish Dispatcher Security Group
      Tags:
      - Key: Name
        Value: AEM Preview Publish Dispatcher Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  PreviewPublishDispatcherSecurityGroupEgress0:
    Condition: CreatePreviewStackCondition
    Properties:
      DestinationSecurityGroupId:
        Ref: PreviewPublishSecurityGroup
      FromPort: '5433'
      GroupId:
        Ref: PreviewPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupEgress
  PreviewPublishDispatcherSecurityGroupEgress1:
    Condition: CreatePreviewStackCondition
    Properties:
      CidrIp:
        Ref: PrivateSubnetInternetOutboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: PreviewPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  PreviewPublishDispatcherSecurityGroupIngress0:
    Condition: CreatePreviewStackCondition
    Properties:
      FromPort: '443'
      GroupId:
        Ref: PreviewPublishDispatcherSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: PreviewPublishDispatcherELBSecurityGroup
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  PreviewPublishDispatcherSecurityGroupIngress1:
    Condition: CreatePreviewStackCondition
    Properties:
      FromPort: '443'
      GroupId:
        Ref: PreviewPublishDispatcherSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: PreviewPublishSecurityGroup
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupIngress
  PreviewPublishDispatcherSecurityGroupIngress2:
    Condition: CreatePreviewStackCondition
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: PreviewPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '22'
    Type: AWS::EC2::SecurityGroupIngress

  PublishSecurityGroup:
    Properties:
      GroupDescription: AEM Publish Security Group
      Tags:
      - Key: Name
        Value: AEM Publish Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  PublishSecurityGroupEgress0:
    Properties:
      DestinationSecurityGroupId:
        Ref: PublishDispatcherSecurityGroup
      FromPort: '443'
      GroupId:
        Ref: PublishSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  PublishSecurityGroupEgress1:
    Properties:
      CidrIp:
        Ref: PrivateSubnetInternetOutboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: PublishSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  PublishSecurityGroupIngress0:
    Properties:
      FromPort: '5433'
      GroupId:
        Ref: PublishSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: PublishDispatcherSecurityGroup
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupIngress
  PublishSecurityGroupIngress1:
    Properties:
      FromPort: '5433'
      GroupId:
        Ref: PublishSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: AuthorSecurityGroup
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupIngress
  PublishSecurityGroupIngress2:
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: PublishSecurityGroup
      IpProtocol: tcp
      ToPort: '22'
    Type: AWS::EC2::SecurityGroupIngress
  PublishSecurityGroupIngress3:
    Properties:
      FromPort: '5433'
      GroupId:
        Ref: PublishSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: OrchestratorSecurityGroup
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupIngress

  AemContentSyncSecurityGroup:
    Properties:
      GroupDescription: Security Group for content sync, allowing access between AEM full set stacks
      Tags:
      - Key: Name
        Value: AEM Content Sync Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  AemContentSyncSecurityGroupIngress0:
    Properties:
      CidrIp:
        Ref: AemContentSyncInboundCidrIpParameter
      FromPort: '4502'
      GroupId:
        Ref: AemContentSyncSecurityGroup
      IpProtocol: tcp
      ToPort: '4503'
    Type: AWS::EC2::SecurityGroupIngress

  PreviewPublishSecurityGroup:
    Condition: CreatePreviewStackCondition
    Properties:
      GroupDescription: AEM Preview Publish Security Group
      Tags:
      - Key: Name
        Value: AEM Preview Publish Security Group
      - Key: StackPrefix
        Value:
          Ref: PrerequisitesStackPrefixParameter
      VpcId:
        Fn::ImportValue:
          Fn::Sub: ${NetworkStackPrefixParameter}-VPCId
    Type: AWS::EC2::SecurityGroup
  PreviewPublishSecurityGroupEgress0:
    Condition: CreatePreviewStackCondition
    Properties:
      DestinationSecurityGroupId:
        Ref: PreviewPublishDispatcherSecurityGroup
      FromPort: '443'
      GroupId:
        Ref: PreviewPublishSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  PreviewPublishSecurityGroupEgress1:
    Condition: CreatePreviewStackCondition
    Properties:
      CidrIp:
        Ref: PrivateSubnetInternetOutboundCidrIpParameter
      FromPort: '443'
      GroupId:
        Ref: PreviewPublishSecurityGroup
      IpProtocol: tcp
      ToPort: '443'
    Type: AWS::EC2::SecurityGroupEgress
  PreviewPublishSecurityGroupIngress0:
    Condition: CreatePreviewStackCondition
    Properties:
      FromPort: '5433'
      GroupId:
        Ref: PreviewPublishSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: PreviewPublishDispatcherSecurityGroup
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupIngress
  PreviewPublishSecurityGroupIngress1:
    Condition: CreatePreviewStackCondition
    Properties:
      FromPort: '5433'
      GroupId:
        Ref: PreviewPublishSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: AuthorSecurityGroup
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupIngress
  PreviewPublishSecurityGroupIngress2:
    Condition: CreatePreviewStackCondition
    Properties:
      CidrIp:
        Ref: SecureShellInboundCidrIpParameter
      FromPort: '22'
      GroupId:
        Ref: PreviewPublishSecurityGroup
      IpProtocol: tcp
      ToPort: '22'
    Type: AWS::EC2::SecurityGroupIngress
  PreviewPublishSecurityGroupIngress3:
    Condition: CreatePreviewStackCondition
    Properties:
      FromPort: '5433'
      GroupId:
        Ref: PreviewPublishSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId:
        Ref: OrchestratorSecurityGroup
      ToPort: '5433'
    Type: AWS::EC2::SecurityGroupIngress
